--- a/04/1/OPG4.1A.tex
+++ b/04/1/OPG4.1A.tex
@@ -1,14 +1,13 @@
 \begin{tikzpicture}
 \begin{axis}[%
 width=0.9\linewidth,
-%height=0.9\linewidth,
-xmax=500,
+height=0.5\linewidth,
+xmax=550,
 xmin=0,
 xlabel={Angular Velocity [\si{\hertz}]},
 ylabel={Natural Frequency [\si{\hertz}]},
 grid=major,
 legend pos=south east,
-axis equal,
 ]
 \addplot [color=red]
   table[row sep=crcr]{%
